<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/startbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="download"
        android:text="@string/download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/subnameinput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/subnamehint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/startbutton"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/postsamount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/postsamount"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/subnameinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/totalprogress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:progress="0"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusView" />

    <TextView
        android:id="@+id/statusView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/noinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/sortRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@id/hotradio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/newradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSortChanged"
            android:text="@string/newradio" />

        <RadioButton
            android:id="@+id/hotradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSortChanged"
            android:text="@string/hotradio" />

        <RadioButton
            android:id="@+id/topradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSortChanged"
            android:text="@string/topradio" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/TimeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:checkedButton="@id/allradio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalprogress"
        tools:visibility="invisible">

        <RadioButton
            android:id="@+id/hourradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onTimeChanged"
            android:text="@string/hourradio" />

        <RadioButton
            android:id="@+id/dayradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onTimeChanged"
            android:text="@string/dayradio" />

        <RadioButton
            android:id="@+id/weekradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onTimeChanged"
            android:text="@string/weekradio" />

        <RadioButton
            android:id="@+id/monthradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onTimeChanged"
            android:text="@string/monthradio" />

        <RadioButton
            android:id="@+id/yearradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onTimeChanged"
            android:text="@string/yearradio" />

        <RadioButton
            android:id="@+id/allradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onTimeChanged"
            android:text="@string/allradio" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sortby"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalprogress" />

</androidx.constraintlayout.widget.ConstraintLayout>